2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GBoxed.xs (gperl_register_boxed)
	* GObject.xs (gperl_register_object)
	* GType.xs (gperl_register_fundamental): When inserting into the
	package → type hash tables, use g_hash_table_replace instead of
	_insert so that the new string pointer is used as the key.  Patch
	by Kevin Ryde.

2009-02-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm
	* NEWS
	* README: Unstable release 1.212.

2009-02-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/a.t
	* GLog.xs: Make sure that messages with % chars in them make it
	through Glib::log() and friends safely.

2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* ParseXSDoc.pm (xsdocparse): Always use Data::Dumper on MSWin32
	for serialization.  Storable seems to consistently fail there,
	stating 'Magic number checking on storable file failed'.

2009-02-02  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.xs
	* GSignal.xs: Hush some compiler warnings.

2009-01-20  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Glib.pm: Add documentation for Glib->filename_to_uri and
	filename_from_uri.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs
	* t/e.t: Add Glib::ParamSpec->value_cmp.  Patch by Kevin Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/e.t: Use UTF-8 instead of ISO-8859-1 to encode umlauts.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* GParamSpec.xs
	* t/e.t: Add Glib::ParamSpec->value_validate.  Patch by Kevin
	Ryde.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/options.t: Don't use UTF-8 umlauts unconditionally as this
	causes trouble on non-UTF-8 locales.

2009-01-18  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* MakeHelper.pm: Add
	Glib::MakeHelper->postamble_precompiled_headers to generate a make
	target for precompiling headers.

	* Makefile.PL: Use the above to create a 'precompiled-headers'
	target that precompiles gperl.h.  This speeds up the compilation